# selenuim_automation

./: memo.md  pyproject.toml
selenium_ampm/: memo.md  pyvenv.cfg  setup.py
selenium_ampm/Scripts/: activate  activate.bat
selenium_ampm/selenium_ampm/: __init__.py  html_tag_diff.py  selenium.py  selenium_operations.py  util.py
selenium_ampm/selenium_ampm/saved_html/: httpswwwbingcom.html  httpswwwbingcom_2.html  httpswwwbingcom_2_only_tag.html  httpswwwbingcom_httpswwwbingcom_2_diff.html  httpswwwbingcom_only_tag.html  httpswwwgooglecom.html  httpswwwgooglecom_2.html  httpswwwgooglecom_2_only_tag.html  httpswwwgooglecom_only_tag.html  httpswwwyahoocojp.html  httpswwwyahoocojp_only_tag.html
selenium_ampm/tests/: test.py
