[tool.poetry]
name        = "selenium_ampm"
version     = "0.1.0"
description = ""
authors     = ["ampm"]
readme      = "README.md"
packages    = [{include = "selenium_ampm"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
